2004-06-10  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-namazu.el: Rewrite.

	* shimbun/sb-fml.el (shimbun-make-contents): Guard error at 
	unsupposed page.

2004-06-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-make-new-session): Doc fix.
	(w3m-safe-view-this-url): Use w3m-goto-url-new-session only when a
	user invokes this command in a buffer not being running the
	w3m-mode.

2004-06-07  Masatake YAMATO  <jet@gyve.org>

	* w3m-hist.el (w3m-history-store-position): Fix a wrong message.

2004-06-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-filter.el (w3m-filter-rules): Relax the condition.

2004-06-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-make-new-session): Doc fix.
	(w3m-safe-view-this-url): Use w3m-goto-url-new-session instead of
	w3m-goto-url when w3m-make-new-session is non-nil.

2004-06-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-make-new-session): New user option.
	(w3m): Make a new emacs-w3m buffer if w3m-make-new-session is
	non-nil and a user specifies a url string.

	* shimbun/sb-cnn-jp.el (shimbun-cnn-jp-x-face-alist): New variable.

2004-06-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Add the
	editorial group and the tensei-jingo group as tenjin.
	(shimbun-asahi-get-headers): Add a special treatment for the
	groups editorial and tenjin.
	(shimbun-asahi-get-headers-for-today): New function.
	(shimbun-asahi-prepare-article): Rename from
	shimbun-asahi-adjust-date-header; remove garbages for the groups
	editorial and tenjin.
	(shimbun-make-contents): Use shimbun-asahi-prepare-article.

	* shimbun/sb-asahi-html.el (shimbun-make-contents): Use
	shimbun-asahi-prepare-article.

2004-06-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-popup-buffer): Don't use focus-frame in Emacs.

	* shimbun/sb-x51.el (shimbun-make-contents): Make sure there are
	the start and the end of contents.

	* shimbun/sb-zeit-de.el (shimbun-make-contents): Ditto.
